fix content overlapping main navigation

--- a/app/globals.css
+++ b/app/globals.css
@@ -74,3 +74,8 @@ ul, ol {
   outline: 2px solid #0070f3; /* Customize focus ring color */
   outline-offset: 2px;
 }
+
+div.children-content {
+  z-index: 0;
+  position: relative;
+}
