--- a/components/main-header/main-header.module.css
+++ b/components/main-header/main-header.module.css
@@ -1,9 +1,13 @@
 .header {
+    position: fixed;
+    top: 0;
+    left: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
     padding: 1rem 3rem;
+    z-index: 9;
 }
 
 .logo,
